fixed bugs with rendering text and images and title of blog items. They were not wrapping correctly and had a lot  of whitespace and was expanding incorrectly.

--- a/frontend/src/BlogItem.module.css
+++ b/frontend/src/BlogItem.module.css
@@ -190,7 +190,8 @@
     margin:auto;
     margin-bottom: 1.5rem;
     height:295px;
-    max-width: 900px;
+    min-width: 500px;
+    max-width: 750px;
     overflow: hidden;
     border:1px solid hsl(0, 0%, 80%);
     /* border:1px solid red; */
@@ -201,6 +202,7 @@
     height:350px;
     gap:0;
     /* border:1px solid blue; */
+    max-width: 900px;
 }
 .image-container {
     width: 100%;
@@ -212,23 +214,24 @@
 .image-container img {
     display:block;
     width:100%;
-    height:auto;
+    height:100%;
     object-fit: cover;
-    aspect-ratio: 1 / 1;
-    background-position:center center;
     background-repeat: no-repeat;
     object-position: center;
-    scale: 1;
+    /* border:1px solid red; */
 }
 .preview-box {
-    display:grid;
-    padding:0px 30px;
-    grid-template-rows: max-content 2.5rem 7rem max-content;
-    gap:.75rem 1rem;
-    width:100%;
     box-sizing: border-box;
-    /* overflow: hidden; */
-    /* border:1px solid green; */
+    width: 100%;
+    max-width: 450px;
+    height: 100%;
+    /* max-height: 10px; */
+    padding:0px 30px;
+    display:flex;
+    flex-direction: column;
+    gap:.85rem;
+    object-fit: contain;
+    /* border:1px solid red; */
 }
 .top-grid {
     display:grid;
@@ -316,34 +319,42 @@
     /* border:1px solid red; */
 }
 .title {
-    /* height:fit-content; */
-    /* border:1px solid green; */
+    display: -webkit-box;
+    height: 48px;
     font-size: 24px;
     font-weight: 500;
     line-height: 1.5rem;
     overflow: hidden;
     cursor:pointer;
     transition: 0.3s ease;
-    /* margin-top: 1rem; */
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
+    /* border:1px solid red; */
 }
 .title:hover {
     color: hsl(0, 0%, 60%);
 }
 .content {
     letter-spacing: 1px;
-    /* word-spacing: 1em; */
-    /* font-family: monospace; */
-    max-height: 125px;
-    overflow: hidden;
-    white-space: pre-wrap;
-    word-wrap: break-word;
     font-size: 12px;
-    line-height: 1.1rem;
-    /* border:1px solid red; */
+    line-height: 1rem;
+    height: 98px;
+    width: 100%;
+    flex-grow: 1;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
+    overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 5; /* number of lines */
+    -webkit-line-clamp: 6; /* number of lines */
+    -webkit-box-orient: vertical;
     text-overflow: ellipsis;
     transition: 0.3s ease;
+    /* border:1px solid blue; */
 }
 .content:hover {
     color: hsl(0, 0%, 60%);
@@ -366,18 +377,10 @@
     padding-top: 12px;
 }
 .comments {
-    /* position: absolute;
-    left:0px;
-    top:50%;
-    transform: translateY(-50%); */
     justify-self: start;
     /* border:1px solid orange; */
 }
 .likes {
-    /* position: absolute;
-    right:0px;
-    top:50%;
-    transform: translateY(-50%); */
     justify-self: end;
 
     /* border:1px solid rgb(255, 106, 0); */
